# rust_projects

./: Cargo.toml  README.md  cronograma.txt  x.md
flappy_game/: Cargo.toml  README.md
flappy_game/src/: main.rs
guessing_number/: Cargo.toml  README.md
guessing_number/src/: lib.rs  main.rs  main.test.rs
guessing_number/tests/: guessing_number.rs
minigrep/: README.md
minigrep/src/: lib.rs
prolog/: test.txt
sixty_challenge_days/: .gitignore  Cargo.toml  book.toml  day-1.md  day-2.md  day-3.md  day-4.md  day-5.md  day-6.1_hash_table.md  day3.md  x.js
sixty_challenge_days/benches/: array.rs  recursion.rs  sort.rs
sixty_challenge_days/chapters/: SUMMARY.md  day_1.md  day_10_part_1_bubble_and_selection_sort.md  day_10_part_2_merge_sort.md  day_11_breadth-first_search.md  day_13_near_protocol_deep_dive.md  day_14_threads.md  day_15_channels.md  day_2.md  day_3.md  day_4.md  day_5.md  day_6.1_hash_table.md  day_6.md  day_6_part_1_hash_table.md  day_8.md  day_8_part_1_insertion_sort.md  day_8_part_2_array_rotation.md  day_9_part_1_recursion.md  day_9_part_2_quick_sort.md  plan.md
sixty_challenge_days/git-gardener/: Cargo.toml  README.md  x.md
sixty_challenge_days/git-gardener/src/: arg.rs  branch.rs  lib.rs  main.rs
sixty_challenge_days/src/: main.rs
sixty_challenge_days/src/impls/: basic_algorithm.rs  file.rs  library.rs  linked_list.rs  mod.rs  product.rs  rectangles.rs  sort.rs
sixty_challenge_days/src/impls/bank_account/: bank_account.rs
sixty_challenge_days/src/impls/concurrency/: atomics.rs  channels.rs  mod.rs  my_once_cell.rs  own_channels.rs  spin_lock.rs  spinlock.rs  threads.rs
sixty_challenge_days/src/impls/dsa/: arrays.rs  graph.mjs  linked_list.rs  mod.rs  recursion.rs  sort.rs
sixty_challenge_days/src/impls/file_format/: config.rs  format_error.rs  mod.rs  setting.rs  setting_value.rs
sixty_challenge_days/src/impls/hashes/: a_hash.rs  lru_cache.rs  mod.rs  word_counter_hash.rs
src/: lib.rs  main.rs
tests/: minigrep.rs
