[workspace]
members = ["sixty_challenge_days", "minigrep", "guessing_number"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bracket-lib = "~0.8.1"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0.197", features = ["derive"] }
async-stream = "0.2"
bincode = "1.3.3"
chrono = {version= "0.4", features = ["serde"]}
serde_json = "1.0.120"
local-ip-address = "0.6.1"
tonic-reflection = "0.12.0"
rand = "0.8.5"
redis ={ version = "0.27.2", features = ["tokio-comp", "streams"] }
sqlx = {version = "*", features = ["runtime-tokio", "macros", "postgres"]}
lazy_static = "1.4.0"
