[package]
name = "sixty_challenge_days"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4.0"

[dev-dependencies]
iai = "0.1"
criterion = "0.5.1"

[[bench]]
name = "sort"
harness = false
