[package]
name = "sixty_challenge_days"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {workspace = true}
lazy_static = {workspace = true}
tokio = {workspace = true}

[dev-dependencies]
iai = "0.1"
criterion = "0.5.1"

[[bench]]
name = "sort"
harness = false
