[package]
name = "git-gardener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.2", features = ["derive", "env"] }
colored = "2.1.0"
dunce = "1.0.4"
git2 = "0.18.2"
serde = { version = "1.0.197", features = ["derive"] }
